e2e/policy/pod-disruption-budget/00-install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pdb
  labels:
    app: nginx-pdb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pdb
  template:
    metadata:
      labels:
        app: nginx-pdb
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: nginx-pdb
spec:
  minAvailable: 2
  selector:
    matchLabels:
      app: nginx-pdb
